--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -472,6 +472,163 @@ nav.main {
   }
 }
 
-/*circle scss*/
+/*contact me scss*/
+#section8{
+   width:100%;
+  margin-left: -69px;
+    background: #efefef;
+    font-size: 62.5%;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    color: #B6B6B6;
+    #hire {
+      background: white;
+      margin: 60px auto 120px;
+      border-top: 15px solid #313A3D;
+      text-align: center;
+      padding: 50px 0 110px;
+      width: 80%;
+      max-width: 1100px;
+      h1 {
+        margin-bottom: 40px;
+        font-size: 4em;
+        text-transform: uppercase;
+        font-family: 'Lato', sans-serif;
+        font-weight: 100;
+      }
+    }
+  }
+
+  form {
+    width: 58.3333333333%;
+    margin: 0 auto;
+    .field {
+      width: 100%;
+      position: relative;
+      margin-bottom: 15px;
+      label {
+        text-transform: uppercase;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #313A3D;
+        width: 100%;
+        padding: 18px 0;
+        font-size: 1.45em;
+        letter-spacing: 0.075em;
+        -webkit-transition: all 333ms ease-in-out;
+        -moz-transition: all 333ms ease-in-out;
+        -o-transition: all 333ms ease-in-out;
+        -ms-transition: all 333ms ease-in-out;
+        transition: all 333ms ease-in-out;
+        + span {
+          font-family: 'SSStandard';
+          opacity: 0;
+          color: white;
+          display: block;
+          position: absolute;
+          top: 12px;
+          left: 7%;
+          font-size: 2.5em;
+          text-shadow: 1px 2px 0 #cd6302;
+          -webkit-transition: all 333ms ease-in-out;
+          -moz-transition: all 333ms ease-in-out;
+          -o-transition: all 333ms ease-in-out;
+          -ms-transition: all 333ms ease-in-out;
+          transition: all 333ms ease-in-out;
+        }
+      }
+      input[type="text"], textarea {
+        border: none;
+        background: #E8E9EA;
+        width: 80.5%;
+        margin: 0;
+        padding: 18px 0;
+        padding-left: 19.5%;
+        color: #313A3D;
+        font-size: 1.4em;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+      }
+      input[type="text"]#msg, textarea#msg {
+        height: 18px;
+        resize: none;
+        -webkit-transition: all 333ms ease-in-out;
+        -moz-transition: all 333ms ease-in-out;
+        -o-transition: all 333ms ease-in-out;
+        -ms-transition: all 333ms ease-in-out;
+        transition: all 333ms ease-in-out;
+      }
+      input[type="text"] {
+        &:focus, &.focused {
+          outline: none;
+        }
+      }
+      textarea {
+        &:focus, &.focused {
+          outline: none;
+        }
+      }
+      input[type="text"] {
+        &:focus#msg, &.focused#msg {
+          padding-bottom: 150px;
+        }
+      }
+      textarea {
+        &:focus#msg, &.focused#msg {
+          padding-bottom: 150px;
+        }
+      }
+      input[type="text"] {
+        &:focus + label, &.focused + label {
+          width: 18%;
+          background: #FD9638;
+          color: #313A3D;
+        }
+      }
+      textarea {
+        &:focus + label, &.focused + label {
+          width: 18%;
+          background: #FD9638;
+          color: #313A3D;
+        }
+      }
+      input[type="text"].focused + label, textarea.focused + label {
+        color: #FD9638;
+      }
+      &:hover label {
+        width: 18%;
+        background: #313A3D;
+        color: white;
+      }
+    }
+    input[type="submit"] {
+      background: #FD9638;
+      color: white;
+      -webkit-appearance: none;
+      border: none;
+      text-transform: uppercase;
+      position: relative;
+      padding: 13px 50px;
+      font-size: 1.4em;
+      letter-spacing: 0.1em;
+      font-family: 'Lato', sans-serif;
+      font-weight: 300;
+      -webkit-transition: all 333ms ease-in-out;
+      -moz-transition: all 333ms ease-in-out;
+      -o-transition: all 333ms ease-in-out;
+      -ms-transition: all 333ms ease-in-out;
+      transition: all 333ms ease-in-out;
+      &:hover {
+        background: #313A3D;
+        color: #FD9638;
+      }
+      &:focus {
+        outline: none;
+        background: #cd6302;
+      }
+    }
+  }
+
 
 
