--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,17 +11,26 @@ body {
   background-blend-mode: overlay;
   background-size: 15%;
 }
-::-webkit-scrollbar {
-  display: none;
+body:after {
+  /* background: linear-gradient(90deg, rgba(190,78,114,1) 0%, rgba(254,117,98,1) 33.33%, rgba(86,72,105,1) 66.66%,  rgba(126,70,99,1) 100%) */
+  background-image: linear-gradient(90deg, rgba(107, 208, 228, 1) 0%, rgba(96, 78, 177, 1) 33%, rgba(200, 142, 102, 1) 66%, rgba(201, 85, 169, 1) 100%);
+  /* w3c */
+  content: "";
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  height: 5px;
+  z-index: +30;
 }
-
-/*Grid Wrapper*/
-
+::-webkit-scrollbar {
+  //display: none;
+}
 #home {
+  position: relative;
   color: #aaaaaf;
   width: 100%;
   height: 100%;
-  position: relative;
   padding: 100px;
   display: block;
   transition: transform 0.5s ease-in-out;
@@ -34,7 +43,7 @@ body {
       display: inline-block;
       margin-right: 25px;
       vertical-align: middle;
-      text-shadow: 0px 5px 10px rgba(0, 0, 0, 1);
+      text-shadow: 0 5px 10px rgba(0, 0, 0, 1);
     }
     .pagetag {
       position: absolute;
@@ -76,9 +85,6 @@ body {
     }
   }
 }
-
-/*Heading*/
-
 #grid_wrapper {
   width: 100%;
   display: inline-block;
@@ -182,13 +188,6 @@ body {
   font-size: 1.5em;
   opacity: 1;
 }
-
-/*End of Section*/
-
-/*NavBar Style*/
-
-/*Comes up only when you're open in a section*/
-
 nav.main {
   overflow-X: auto;
   overflow-Y: visible;
@@ -201,35 +200,6 @@ nav.main {
   display: block;
   white-space: nowrap;
 }
-
-body:after {
-  /* background: linear-gradient(90deg, rgba(190,78,114,1) 0%, rgba(254,117,98,1) 33.33%, rgba(86,72,105,1) 66.66%,  rgba(126,70,99,1) 100%) */
-  background-image: linear-gradient(90deg, rgba(107, 208, 228, 1) 0%, rgba(96, 78, 177, 1) 33%, rgba(200, 142, 102, 1) 66%, rgba(201, 85, 169, 1) 100%);
-  /* w3c */
-  content: "";
-  position: fixed;
-  width: 100%;
-  top: 0px;
-  left: 0px;
-  height: 5px;
-  z-index: +30;
-}
-
-#footer {
-  &:after, &:before {
-    /* background: linear-gradient(90deg, rgba(190,78,114,1) 0%, rgba(254,117,98,1) 33.33%, rgba(86,72,105,1) 66.66%,  rgba(126,70,99,1) 100%) */
-    background-image: linear-gradient(90deg, rgba(107, 208, 228, 1) 0%, rgba(96, 78, 177, 1) 33%, rgba(200, 142, 102, 1) 66%, rgba(201, 85, 169, 1) 100%);
-    /* w3c */
-    content: "";
-    position: fixed;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    height: 5px;
-    z-index: +30;
-  }
-}
-
 nav.main {
   &.inactive > .tab {
     transform: rotateX(90deg) translateY(-25px);
@@ -291,11 +261,6 @@ nav.main {
     }
   }
 }
-
-/*End of Section*/
-
-/*Ripple Styling*/
-
 .ripple {
   position: fixed;
   animation: ripple 1s 1 ease-out;
@@ -308,27 +273,17 @@ nav.main {
   border-radius: 50%;
   opacity: 0;
 }
-
-/*One for the BIIIIG ONE!*/
-
 .mega.ripple {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   opacity: 1;
 }
-
 @keyframes ripple {
   0% {
     opacity: 1;
     transform: scale(0);
   }
 }
-
-
-/*End of Section*/
-
-/*This one Wraps content of the tabs*/
-
 #content_wrapper {
   &.inactive {
     pointer-events: none;
@@ -413,229 +368,32 @@ nav.main {
     cursor: pointer;
   }
 }
-
 @keyframes blow {
   to {
     font-size: 50em;
     opacity: 0;
   }
 }
-
-
 @keyframes fadeOut {
   from {
     opacity: 1;
   }
 }
-
-
 @keyframes flipOpen {
   from {
     transform: translate(-50%, -50%);
   }
 }
-
-
 @keyframes flipClose {
   from {
     transform: translate(-50%, -50%) rotateY(180deg);
   }
 }
-
-
-/*End of Section*/
-
-/*Footer Design*/
-
-#footer {
-  font-size: 0.9em;
-  position: relative;
-  margin-top: 200px;
-  width: 100%;
-  height: 70px;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.3);
-  z-index: +15;
-  &:before {
-    position: absolute;
-    top: 0;
-    height: 3px;
-  }
-  &:after {
-    position: absolute;
-    bottom: 1px;
-    top: unset;
-    height: 3px;
-  }
-}
-
-/*contact me scss*/
-
-#section8{
-   width:100%;
-  margin-left: -69px;
-    background: #efefef;
-    font-size: 62.5%;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    color: #B6B6B6;
-    #hire {
-      background: white;
-      margin: 60px auto 120px;
-      border-top: 15px solid #313A3D;
-      text-align: center;
-      padding: 50px 0 110px;
-      width: 80%;
-      max-width: 1100px;
-      h1 {
-        margin-bottom: 40px;
-        font-size: 4em;
-        text-transform: uppercase;
-        font-family: 'Lato', sans-serif;
-        font-weight: 100;
-      }
-    }
-  }
-
-  form {
-    width: 58.3333333333%;
-    margin: 0 auto;
-    .field {
-      width: 100%;
-      position: relative;
-      margin-bottom: 15px;
-      label {
-        text-transform: uppercase;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background: #313A3D;
-        width: 100%;
-        padding: 18px 0;
-        font-size: 1.45em;
-        letter-spacing: 0.075em;
-        -webkit-transition: all 333ms ease-in-out;
-        -moz-transition: all 333ms ease-in-out;
-        -o-transition: all 333ms ease-in-out;
-        -ms-transition: all 333ms ease-in-out;
-        transition: all 333ms ease-in-out;
-        + span {
-          font-family: 'SSStandard';
-          opacity: 0;
-          color: white;
-          display: block;
-          position: absolute;
-          top: 12px;
-          left: 7%;
-          font-size: 2.5em;
-          text-shadow: 1px 2px 0 #cd6302;
-          -webkit-transition: all 333ms ease-in-out;
-          -moz-transition: all 333ms ease-in-out;
-          -o-transition: all 333ms ease-in-out;
-          -ms-transition: all 333ms ease-in-out;
-          transition: all 333ms ease-in-out;
-        }
-      }
-      input[type="text"], textarea {
-        border: none;
-        background: #E8E9EA;
-        width: 80.5%;
-        margin: 0;
-        padding: 18px 0;
-        padding-left: 19.5%;
-        color: #313A3D;
-        font-size: 1.4em;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-      }
-      input[type="text"]#msg, textarea#msg {
-        height: 18px;
-        resize: none;
-        -webkit-transition: all 333ms ease-in-out;
-        -moz-transition: all 333ms ease-in-out;
-        -o-transition: all 333ms ease-in-out;
-        -ms-transition: all 333ms ease-in-out;
-        transition: all 333ms ease-in-out;
-      }
-      input[type="text"] {
-        &:focus, &.focused {
-          outline: none;
-        }
-      }
-      textarea {
-        &:focus, &.focused {
-          outline: none;
-        }
-      }
-      input[type="text"] {
-        &:focus#msg, &.focused#msg {
-          padding-bottom: 150px;
-        }
-      }
-      textarea {
-        &:focus#msg, &.focused#msg {
-          padding-bottom: 150px;
-        }
-      }
-      input[type="text"] {
-        &:focus + label, &.focused + label {
-          width: 18%;
-          background: #FD9638;
-          color: #313A3D;
-        }
-      }
-      textarea {
-        &:focus + label, &.focused + label {
-          width: 18%;
-          background: #FD9638;
-          color: #313A3D;
-        }
-      }
-      input[type="text"].focused + label, textarea.focused + label {
-        color: #FD9638;
-      }
-      &:hover label {
-        width: 18%;
-        background: #313A3D;
-        color: white;
-      }
-    }
-    input[type="submit"] {
-      background: #FD9638;
-      color: white;
-      -webkit-appearance: none;
-      border: none;
-      text-transform: uppercase;
-      position: relative;
-      padding: 13px 50px;
-      font-size: 1.4em;
-      letter-spacing: 0.1em;
-      font-family: 'Lato', sans-serif;
-      font-weight: 300;
-      -webkit-transition: all 333ms ease-in-out;
-      -moz-transition: all 333ms ease-in-out;
-      -o-transition: all 333ms ease-in-out;
-      -ms-transition: all 333ms ease-in-out;
-      transition: all 333ms ease-in-out;
-      &:hover {
-        background: #313A3D;
-        color: #FD9638;
-      }
-      &:focus {
-        outline: none;
-        background: #cd6302;
-      }
-    }
-  }
-
-//section6 ---------------------------------------------------------------------------------
-
 #section6{
   @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&subset=latin-ext');
-    position: relative;
-   // overflow-x: hidden!important;
+    overflow-x: hidden!important;
     font-family: 'Quicksand', sans-serif;
-  top: 20px !important;
+  top: 10px !important;
   a, a:hover {
     text-decoration: none;
   }
@@ -692,7 +450,7 @@ nav.main {
     //transform: translateX(-50%);
 
     &.active {
-      left: -72px;
+      left: 0;
       top: 0;
       opacity: 1;
     }
@@ -702,7 +460,6 @@ nav.main {
   .news {
 
     &-slider {
-      z-index: 2;
       max-width: 1300px;
       margin-left: auto;
       margin-right: auto;
@@ -958,4 +715,194 @@ nav.main {
   }
 
 }
+#section8{
+  width:100%;
+  margin-left: -69px;
+  background: #efefef;
+  font-size: 62.5%;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  color: #B6B6B6;
+  #hire {
+    background: white;
+    margin: 60px auto 120px;
+    border-top: 15px solid #313A3D;
+    text-align: center;
+    padding: 50px 0 110px;
+    width: 80%;
+    max-width: 1100px;
+    h1 {
+      margin-bottom: 40px;
+      font-size: 4em;
+      text-transform: uppercase;
+      font-family: 'Lato', sans-serif;
+      font-weight: 100;
+    }
+  }
+  form {
+    width: 58.3333333333%;
+    margin: 0 auto;
+    .field {
+      width: 100%;
+      position: relative;
+      margin-bottom: 15px;
+      label {
+        text-transform: uppercase;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #313A3D;
+        width: 100%;
+        padding: 18px 0;
+        font-size: 1.45em;
+        letter-spacing: 0.075em;
+        -webkit-transition: all 333ms ease-in-out;
+        -moz-transition: all 333ms ease-in-out;
+        -o-transition: all 333ms ease-in-out;
+        -ms-transition: all 333ms ease-in-out;
+        transition: all 333ms ease-in-out;
+        + span {
+          font-family: 'SSStandard';
+          opacity: 0;
+          color: white;
+          display: block;
+          position: absolute;
+          top: 12px;
+          left: 7%;
+          font-size: 2.5em;
+          text-shadow: 1px 2px 0 #cd6302;
+          -webkit-transition: all 333ms ease-in-out;
+          -moz-transition: all 333ms ease-in-out;
+          -o-transition: all 333ms ease-in-out;
+          -ms-transition: all 333ms ease-in-out;
+          transition: all 333ms ease-in-out;
+        }
+      }
+      input[type="text"], textarea {
+        border: none;
+        background: #E8E9EA;
+        width: 80.5%;
+        margin: 0;
+        padding: 18px 0;
+        padding-left: 19.5%;
+        color: #313A3D;
+        font-size: 1.4em;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+      }
+      input[type="text"]#msg, textarea#msg {
+        height: 18px;
+        resize: none;
+        -webkit-transition: all 333ms ease-in-out;
+        -moz-transition: all 333ms ease-in-out;
+        -o-transition: all 333ms ease-in-out;
+        -ms-transition: all 333ms ease-in-out;
+        transition: all 333ms ease-in-out;
+      }
+      input[type="text"] {
+        &:focus, &.focused {
+          outline: none;
+        }
+      }
+      textarea {
+        &:focus, &.focused {
+          outline: none;
+        }
+      }
+      input[type="text"] {
+        &:focus#msg, &.focused#msg {
+          padding-bottom: 150px;
+        }
+      }
+      textarea {
+        &:focus#msg, &.focused#msg {
+          padding-bottom: 150px;
+        }
+      }
+      input[type="text"] {
+        &:focus + label, &.focused + label {
+          width: 18%;
+          background: #FD9638;
+          color: #313A3D;
+        }
+      }
+      textarea {
+        &:focus + label, &.focused + label {
+          width: 18%;
+          background: #FD9638;
+          color: #313A3D;
+        }
+      }
+      input[type="text"].focused + label, textarea.focused + label {
+        color: #FD9638;
+      }
+      &:hover label {
+        width: 18%;
+        background: #313A3D;
+        color: white;
+      }
+    }
+    input[type="submit"] {
+      background: #FD9638;
+      color: white;
+      -webkit-appearance: none;
+      border: none;
+      text-transform: uppercase;
+      position: relative;
+      padding: 13px 50px;
+      font-size: 1.4em;
+      letter-spacing: 0.1em;
+      font-family: 'Lato', sans-serif;
+      font-weight: 300;
+      -webkit-transition: all 333ms ease-in-out;
+      -moz-transition: all 333ms ease-in-out;
+      -o-transition: all 333ms ease-in-out;
+      -ms-transition: all 333ms ease-in-out;
+      transition: all 333ms ease-in-out;
+      &:hover {
+        background: #313A3D;
+        color: #FD9638;
+      }
+      &:focus {
+        outline: none;
+        background: #cd6302;
+      }
+    }
+  }
+}
+#footer {
+  font-size: 0.9em;
+  position: relative;
+  margin-top: 200px;
+  width: 100%;
+  height: 70px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.3);
+  z-index: +15;
+  &:before {
+    position: absolute;
+    top: 0;
+    height: 3px;
+  }
+  &:after {
+    position: absolute;
+    bottom: 1px;
+    top: unset;
+    height: 3px;
+  }
+  &:after, &:before {
+    /* background: linear-gradient(90deg, rgba(190,78,114,1) 0%, rgba(254,117,98,1) 33.33%, rgba(86,72,105,1) 66.66%,  rgba(126,70,99,1) 100%) */
+    background-image: linear-gradient(90deg, rgba(107, 208, 228, 1) 0%, rgba(96, 78, 177, 1) 33%, rgba(200, 142, 102, 1) 66%, rgba(201, 85, 169, 1) 100%);
+    /* w3c */
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    height: 5px;
+    z-index: +30;
+  }
+
+}
+
 
